Complete pt. 7, Routing

--- a/src/app/hero-detail/hero-detail.component.html
+++ b/src/app/hero-detail/hero-detail.component.html
@@ -15,5 +15,5 @@
       <input [(ngModel)]="hero.superPower" placeholder="e.g., can make wind"/>
     </label>
   </div>
-
+  <button (click)="goBack()">go back</button>
 </div>
