--- a/src/app/messages/messages.component.css
+++ b/src/app/messages/messages.component.css
@@ -1,10 +1,19 @@
 .message-block {
   background-color: #f8f8f8;
-  height: 400px;
+  bottom: 0;
+  box-shadow: 3px 3px 5px 6px #ccc;
+  height: 200px;
   overflow: scroll;
   padding: 0 1em;
   position: fixed;
   right: 0;
-  top: 0;
-  width: 400px;
+  width: 320px;
+}
+
+.message-block-list {
+  padding: .5em 0;
+}
+.message-block-list li {
+  list-style-type: none;
+  padding: .25em 0;
 }
